fixed resolution issue on mobile devices

--- a/index.css
+++ b/index.css
@@ -80,6 +80,7 @@ button {
     color: white;
     border: none;
     margin-top: 20px;
+    margin-left: 10px;
     font-family: "Open Sans", 'Courier New', Courier, monospace;
 }
 
@@ -198,7 +199,7 @@ h3 {
 }
 
 /*Desktop Version*/
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1200px) {
     #location-description img {
         width: 100%;
     }
